--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,10 @@
         <item>Male</item>
     </string-array>
 
+    <string-array name="property_array">
+        <item>ABC</item>
+        <item>Siphakamile</item>
+        <item>Mganka</item>
+    </string-array>
+
 </resources>
